<resources>
    <string name="app_name">VideoCall</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tel">号码</string>
    <string name="userName">用户名</string>
    <string name="sign_up">注册</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>

    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>

    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>

    <string name="Are_connected_to_each_other">正在连接对方...</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受...</string>
    <string name="In_the_call">通话中...</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="hanging_up">正在挂断..</string>
    <string name="add">添加</string>
    <string name="name">好友姓名</string>
    <string name="accept">同意</string>
</resources>
