<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tel"/>

    <Button
        android:layout_below="@id/editTel"
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="呼叫"/>

    <EditText
        android:id="@+id/editUsername"
        android:layout_below="@id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"/>

    <EditText
        android:id="@+id/editPwd"
        android:layout_below="@id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"/>

    <Button
        android:layout_below="@id/editPwd"
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>

    <Button
        android:layout_below="@id/btnSignUp"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <EditText
        android:id="@+id/editName"
        android:layout_below="@id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <Button
        android:layout_below="@id/editName"
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    <EditText
        android:id="@+id/editToName"
        android:layout_below="@id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <Button
        android:layout_below="@id/editToName"
        android:id="@+id/btnAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept"/>


</RelativeLayout>
